--- a/admin-gym-system/package.json
+++ b/admin-gym-system/package.json
@@ -9,7 +9,6 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "axios": "^0.27.2",
     "@fortawesome/fontawesome-free": "^6.1.1",
     "axios": "^0.27.2",
     "chart.js": "^3.8.0",
@@ -19,7 +18,8 @@
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "vuetify": "^2.6.0",
-    "vuex": "^3.4.0"
+    "vuex": "^3.4.0",
+    "vuex-persistedstate": "^4.1.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.15",
